@@ -131,6 +131,8 @@ PHP                                                                        NEWS
   (Dmitry)
 - Fixed bug #38456 (Apache2 segfaults when virtual() is called in .php
   ErrorDocument). (Ilia)
+- Fixed bug #38319 (Remove bogus warnings from persistent PDO connections).
+  (Ilia)
 - Fixed bug #38252 (Incorrect PDO error message on invalid default fetch
   mode). (Ilia)
 - Fixed bug #37773 (iconv_substr() gives "Unknown error" when string length = 1").
